# FastAPI-project

./: .env.example  .gitignore  .pre-commit-config.yml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 5ed0d2ab5968_first_revision.py  822ad612611f_seccond_revision.py  89d15ddcaa3b_first_revision.py  cf8315ced0e3_third_revision.py
fastapi_project/: Dockerfile
src/: auth.py  main.py  models.py  schemas.py  service.py
tests/: test_main.py
