[project]
name = "final_project"
version = "0.1.0"
description = "Project management/profiles dashboard - a service to create, update, share, and delete projects information(details, attached documents)"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Simon Muncan", email = "simon_muncan@epam.com"}
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "http://localhost/"

[tool.mypy]
files =["src"]
ignore_missing_imports = true
strict_equality = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[build-system.dynamic]
dependencies = {file = ["requirements.txt"]}
