[project]
name = "final_project"
version = "0.1.0"
description = "ProjectDetails management/profiles dashboard - a service to create, update, share, and delete projects information(details, attached documents)"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Simon Muncan", email = "simon_muncan@epam.com"}
]
dependencies = [
    "fastapi[standard]==0.115.0",
    "uvicorn==0.34.0",
    "sqlalchemy==2.0.38",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.1",
    "PyJWT==2.10.1",
    "boto3==1.37.7",
    "boto3-stubs==1.37.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "mypy==1.15.0",
    "flake8==7.1.1",
    "black==25.1.0",
    "isort==6.0.0",
    "pre-commit==4.1.0",
]

[project.urls]
Homepage = "http://localhost/"

[tool.mypy]
files = "src"
python_version = 3.13

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py313"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
